fixed index on mobile

--- a/assets/new.css
+++ b/assets/new.css
@@ -78,9 +78,25 @@
 	width: 50%;
 	padding: 5px;
 }
+}
+
+@media (max-width: 767px) {
 .inicio{
-	width: 30%;
-	padding: 5px;
+	width: 50% !important;
+    float: left;
+}
+.cartao{
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-bottom: 0px;
+}
+.menu-inicial{
+	padding-left: 1.5em;
+	padding-right: 1.5em;
+}
+.card-block{
+	padding-top: 10%;
+	padding-bottom: 10%;
 }
 }
 
